# SoftDesk

./: .env.example  .flake8  .gitignore  EXAMPLES.md  README.md  SoftDesk_API.postman_collection.json  TESTS.md  lien_repo_github.txt  manage.py  prepare_and_run.bat  pyproject.toml  pytest.ini  run_tests.py
accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_alter_customuser_age_and_more.py
postman/collections/SoftDesk API/Authentication/: Get Current User Profile.request.yaml  List All Users.request.yaml  Obtain Token.request.yaml  Refresh Token.request.yaml  Register User.request.yaml
postman/collections/SoftDesk API/Comments/: Create Comment.request.yaml  Delete Comment.request.yaml  Get Comment.request.yaml  List Comments.request.yaml  Update Comment.request.yaml
postman/collections/SoftDesk API/Issues/: Create Issue.request.yaml  Delete Issue.request.yaml  Get Issue Details.request.yaml  List Issues.request.yaml  Update Issue.request.yaml
postman/collections/SoftDesk API/Projects/: Add Contributor.request.yaml  Create Project.request.yaml  Delete Project.request.yaml  Get Project Details.request.yaml  (+3 more)
postman/environments/: SoftDesk local.environment.yaml
softdesk/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_accounts.py  test_tracker.py
tracker/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_issue_assignee.py
